refactor: enforce clean layering and unify comment style
- Relocate in-memory adapters to infrastructure
- Align code structure with SDD → DDD workflow
- Standardize class and method comments to consistent engineering style
- Adjust tests to match structural changes